# pychess

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.py  start.py  tox.ini
.github/workflows/: pythonapp.yml
pychess/: grid.py  starting_grid.py
pychess/piece/: color.py  move_iters.py  position.py
pychess/piece/pieces/: __init__.py  base.py  bishop.py  king.py  knight.py  pawn.py  queen.py  rook.py
src/: chess_grid.py  grid.py  move_logic.py
src/piece/: pawn.py  piece_base.py
src/utils/: color.py
tests/: test_grid.py  test_move.py  test_piece.py  test_starting_grid.py
tests/piece/: test_bishop.py  test_color.py  test_king.py  test_knight.py  test_move_iters.py  test_pawn.py  test_piece_base.py  test_position.py  test_queen.py  test_rook.py
